Fixed some UI bugs in public chat
Signed-off-by: Marc-Antoine Hinse <marc_antoine_hinse@hotmail.com>

--- a/app/res/layout/public_chat.xml
+++ b/app/res/layout/public_chat.xml
@@ -60,6 +60,8 @@
         android:divider="@color/transparent"
         android:dividerHeight="10dp"
         android:listSelector="@android:color/transparent"
+        android:overScrollMode="never"
+        android:scrollbars="none"
         android:stackFromBottom="true" />
 
     <RelativeLayout
