--- a/app/res/layout/chat_even.xml
+++ b/app/res/layout/chat_even.xml
@@ -67,14 +67,6 @@
                 android:textColor="@color/darker_grey"
                 android:textSize="12sp" />
 
-            <ImageView
-                android:id="@+id/picture"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_below="@id/name"
-                android:scaleType="centerCrop"
-                android:visibility="gone" />
-
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
@@ -95,6 +87,29 @@
                 android:textColor="@color/darker_grey"
                 android:textSize="11sp" />
         </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginRight="58dp"
+            android:layout_toRightOf="@id/avatar"
+            android:paddingLeft="6dp"
+            android:scaleType="centerCrop"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/time_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="68dp"
+            android:layout_toRightOf="@id/avatar"
+            android:paddingBottom="5dp"
+            android:text="@string/hello_world"
+            android:textColor="@color/white"
+            android:textSize="11sp" />
     </RelativeLayout>
     <!-- Surface View End -->
 
