--- a/app/res/layout/chat_even_private.xml
+++ b/app/res/layout/chat_even_private.xml
@@ -45,6 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="12dp"
         android:layout_marginRight="68dp"
         android:paddingBottom="5dp"
         android:text="@string/hello_world"
